fix: Adjust chrome scrollbars to fix display issue
closes #232

--- a/src/options/options.scss
+++ b/src/options/options.scss
@@ -21,7 +21,6 @@
   &.wrapper {
     display: flex;
     overflow: hidden;
-    width: 100wh;
     height: 100vh;
   }
   
